Install dependecies & write prisma models

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "useTabs": true,
+  "tabWidth": 2,
+  "semi": false,
+  "arrowParens": "avoid"
 }
